--- a/app/views/incident/index.jade
+++ b/app/views/incident/index.jade
@@ -83,7 +83,6 @@ block content
                                 .form-group
                                     label.col-sm-2.control-label 진행구분
                                     .col-sm-2
-                                        
                                         select.form-control(id='status_nm' name='status_nm' )
                                             option(value='접수대기') 접수대기
                                             option(value='처리중') 처리중
@@ -101,12 +100,8 @@ block content
                                             option 최근1년
                                             option 전체검색
                                 .form-group.m-b-0
-                                    
-                                  
-                               
                                     label.col-sm-2.control-label
                                     .col-sm-2
-                                        
                                         select.form-control(id='searchType' name='searchType')
                                             option(value='title,content') 제목+내용
                                             option(value='title') 제목
@@ -137,7 +132,6 @@ block content
                                                     b #{incident[i].manager_nm}
                                                     | #{incident[i].receipt_date}   
                                                 span.p-w-xs
-
                                             a.forum-item-title(onclick="onclick=location.href='/incident/viewDetail/#{incident[i]._id}'")
                                                 i.md.md-desktop-windows
                                                 | #{incident[i].title}
@@ -146,7 +140,6 @@ block content
                                             .forum-content.truncate1.fh-60
                                                 a(onclick="onclick=location.href='/incident/viewDetail/#{incident[i]._id}'")
                                                     | #{incident[i].content}
-
                                             a.text-muted.text-more(onclick="onclick=location.href='/incident/viewDetail/#{incident[i]._id}'") 더보기
                                             .forum-level
                                                 p.text-muted.font-13
@@ -164,7 +157,8 @@ block content
                 
             - }   
 
-                #work_list.row
+                #more_view.row
+                    .col-lg-12
                         .card-box
                             p
                                 a.text-muted.text-more(id='moreView') 더보기 >>>
