# KSY 파일다운로드

--- a/app/views/incident/viewDetail.jade
+++ b/app/views/incident/viewDetail.jade
@@ -62,9 +62,9 @@ block content
                                         - for( var i = 0 ; incident.attach_file.length > i ; i++ ){
                                         p.m-b-5.font-13
                                             i.ti-save.text-primary.m-r-10
-                                            | #{incident.attach_file[i].filename}
-                                            span.text-muted.m-l-10 (???.06KB)
-                                            a.m-l-10(href='/incident/viewDetail/download/#{incident._id}/#{incident.attach_file[i].filename}') 저장
+                                            | #{incident.attach_file[i].originalname}
+                                            span.text-muted.m-l-10 (#{incident.attach_file[i].size} Byte)
+                                            a.m-l-10(href='/incident/download/#{incident.attach_file[i].path}') 저장
                                         - }
                                         - }
                                         // end : text 형식 첨부파일 영역
@@ -77,8 +77,8 @@ block content
                                             - if (incident.attach_file.length > 0) {
                                             - for( var i = 0 ; incident.attach_file.length > i ; i++ ){
                                             .col-sm-2.col-xs-4
-                                                a(href='/incident/viewDetail/download/#{incident._id}/#{incident.attach_file[i].filename}')
-                                                    img.img-thumbnail.img-responsive(src='/#{incident._id}/#{incident.attach_file[i].filename}', alt='#{incident.attach_file[i].filename}')
+                                                a(href='/incident/download/#{incident.attach_file[i].path}')
+                                                    img.img-thumbnail.img-responsive(src='#{incident.attach_file[i].originalname}', alt='#{incident.attach_file[i].originalname}')
                                             - }
                                             - }
                                         // end 접수내용
