--- a/app/views/incident/index.jade
+++ b/app/views/incident/index.jade
@@ -77,7 +77,7 @@ block content
                 .row
                     .col-lg-12
                         .card-box
-                            form.form-horizontal.group-border-dashed(action='#')
+                            form.form-horizontal.group-border-dashed(action='#', onsubmit='return false;')
                                 .form-group
                                     label.col-sm-2.control-label 진행구분
                                     .col-sm-2
