#incident new 수정

--- a/app/views/incident/index.jade
+++ b/app/views/incident/index.jade
@@ -112,8 +112,12 @@ block content
                                             i.fa.fa-search.m-l-5
                 // end Search Area
                 // start List Area 
-                #more_list.row
-                #more_view.row
+                .row
+                    .col-lg-12
+                        .card-box
+                            .forum-container
+                                #more_list.row
+                            #more_view.row
               
                                     
         // end content
