--- a/app/views/search/viewall.jade
+++ b/app/views/search/viewall.jade
@@ -1,72 +1,61 @@
 extends ../layouts/default
 block head
-    
-    meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width,initial-scale=1')
-    meta(name='description', content='A fully featured admin theme which can be used to build CRM, CMS, etc.')
-    meta(name='author', content='Coderthemes')
-    link(rel='shortcut icon', href='assets/images/favicon_1.ico')
     title  1-4 처리된 내용검색
-    // Plugins css
-    link(href='../plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.css', rel='stylesheet')
-    link(href='../plugins/multiselect/css/multi-select.css', rel='stylesheet', type='text/css')
-    link(href='../plugins/select2/select2.css', rel='stylesheet', type='text/css')
-    link(href='../plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.css', rel='stylesheet')
-    link(href='../plugins/timepicker/bootstrap-timepicker.min.css', rel='stylesheet')
-    link(href='../plugins/mjolnic-bootstrap-colorpicker/dist/css/bootstrap-colorpicker.min.css', rel='stylesheet')
-    link(href='../plugins/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css', rel='stylesheet')
-    link(href='../plugins/bootstrap-daterangepicker/daterangepicker.css', rel='stylesheet')
     // summernot
-    link(href='../plugins/summernote/dist/summernote.css', rel='stylesheet')
-    link(href='../plugins/switchery/switchery.min.css', rel='stylesheet')
-    link(href='assets/css/bootstrap.min.css', rel='stylesheet', type='text/css')
-    link(href='assets/css/core.css', rel='stylesheet', type='text/css')
-    link(href='assets/css/icons.css', rel='stylesheet', type='text/css')
-    link(href='assets/css/components.css', rel='stylesheet', type='text/css')
-    link(href='assets/css/pages.css', rel='stylesheet', type='text/css')
-    link(href='assets/css/menu_light.css', rel='stylesheet', type='text/css')
-    link(href='assets/css/responsive.css', rel='stylesheet', type='text/css')
-    script(src='assets/js/modernizr.min.js')
+    link(href='/plugins/summernote/dist/summernote.css', rel='stylesheet')
+    
+    link(href='/plugins/switchery/switchery.min.css', rel='stylesheet')
+    link(href='/assets/css/bootstrap.min.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/core.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/icons.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/components.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/pages.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/menu_light.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/responsive.css', rel='stylesheet', type='text/css')
+
+    //첨부파일
+    link(href='/vendor/fileupload/css/fileinput.css', media='all', rel='stylesheet', type='text/css')
+
+    script(src='/assets/js/modernizr.min.js')
     // HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
     // WARNING: Respond.js doesn't work if you view the page via file://
     //if lt IE 9
     script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
     script(src='https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
-    
-
-    script(src='/isu/js/incident/index.js', type='text/javascript')
-    script(src='/isu/js/search/datepicker.js' type='text/javascript')
-    script(src='https://code.jquery.com/ui/1.12.1/jquery-ui.js')
-    link(rel='stylesheet', href='//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css')
 
     // jQuery
-    script(src='assets/js/jquery.min.js')
-    script(src='assets/js/bootstrap.min.js')
-    script(src='assets/js/detect.js')
-    script(src='assets/js/fastclick.js')
-    script(src='assets/js/jquery.slimscroll.js')
-    script(src='assets/js/jquery.blockUI.js')
-    script(src='assets/js/waves.js')
-    script(src='assets/js/wow.min.js')
-    script(src='assets/js/jquery.nicescroll.js')
-    script(src='assets/js/jquery.scrollTo.min.js')
-    script(src='../plugins/switchery/switchery.min.js')
-    script(src='../plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.min.js')
-    script(type='text/javascript', src='../plugins/multiselect/js/jquery.multi-select.js')
-    script(type='text/javascript', src='../plugins/jquery-quicksearch/jquery.quicksearch.js')
-    script(src='../plugins/select2/select2.min.js', type='text/javascript')
-    script(src='../plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.js', type='text/javascript')
-    script(src='../plugins/bootstrap-inputmask/bootstrap-inputmask.min.js', type='text/javascript')
-    script(src='../plugins/moment/moment.js')
-    script(src='../plugins/timepicker/bootstrap-timepicker.min.js')
-    script(src='../plugins/mjolnic-bootstrap-colorpicker/dist/js/bootstrap-colorpicker.min.js')
-    script(src='../plugins/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js')
-    script(src='../plugins/bootstrap-daterangepicker/daterangepicker.js')
+    script(src='/assets/js/jquery.min.js')
+    script(src='/assets/js/bootstrap.min.js')
+    script(src='/assets/js/detect.js')
+    script(src='/assets/js/fastclick.js')
+    script(src='/assets/js/jquery.slimscroll.js')
+    script(src='/assets/js/jquery.blockUI.js')
+    script(src='/assets/js/waves.js')
+    script(src='/assets/js/wow.min.js')
+    script(src='/assets/js/jquery.nicescroll.js')
+    script(src='/assets/js/jquery.scrollTo.min.js')
+    script(src='/plugins/switchery/switchery.min.js')
+    script(src='/plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.min.js')
+    script(type='text/javascript', src='/plugins/multiselect/js/jquery.multi-select.js')
+    script(type='text/javascript', src='/plugins/jquery-quicksearch/jquery.quicksearch.js')
+    script(src='/plugins/select2/select2.min.js', type='text/javascript')
+    script(src='/plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.js', type='text/javascript')
+    script(src='/plugins/bootstrap-inputmask/bootstrap-inputmask.min.js', type='text/javascript')
+    script(src='/plugins/moment/moment.js')
+    script(src='/plugins/timepicker/bootstrap-timepicker.min.js')
+    script(src='/plugins/mjolnic-bootstrap-colorpicker/dist/js/bootstrap-colorpicker.min.js')
+    script(src='/plugins/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js')
+    script(src='/plugins/bootstrap-daterangepicker/daterangepicker.js')
     // form summernote
-    script(src='../plugins/summernote/dist/summernote.min.js')
-    script(src='assets/js/jquery.core.js')
-    script(src='assets/js/jquery.app.js')
-    script(src='/vendor/jquery/jquery.min.js')
+    script(src='/plugins/summernote/dist/summernote.min.js')
+
+    //첨부파일
+    script(src='/vendor/fileupload/js/fileinput.js', type='text/javascript')
+    script(src='/isu/js/incident/new.js', type='text/javascript')
+
+    script(src='/isu/js/search/viewall.js', type='text/javascript')
+
+    
 
     
     script.
@@ -288,6 +277,7 @@ script.
         });
     });
 
+        
 
 block content
       // ==============================================================
@@ -312,7 +302,7 @@ block content
             .row
               .col-lg-12
                 .card-box
-                  form.form-horizontal.group-border-dashed(action='#')
+                  form.form-horizontal.group-border-dashed(name='form' action='/search/viewall' method='get')
                     .form-group
                       label.col-sm-2.control-label 상위업무
                       .col-sm-2
@@ -328,15 +318,21 @@ block content
                           option 항목2
                           option 항목3
                           option 항목4
+                    .form-group
                       label.col-sm-2.control-label 검색기간
-                      .col-sm-2
-                        select.form-control
-                          option 최근1주일
-                          option 최근1개월
-                          option 최근3개월
-                          option 최근6개월
-                          option 최근1년
-                          option 전체검색
+                      .col-sm-4
+                        .input-group
+                          .input-group
+                            input.form-control(type='text', placeholder='yyyy-mm-dd' id='datepicker_rcd' name='datepicker_rcd' value=datepicker_rcd)
+                            span.input-group-addon.bg-primary.b-0.text-white
+                              i.ion-calendar
+                      .col-sm-4
+                        .input-group
+                          .input-group
+                            input.form-control(type='text', placeholder='yyyy-mm-dd' id='datepicker_rcd2' name='datepicker_rcd2' value=datepicker_rcd2)
+                            span.input-group-addon.bg-primary.b-0.text-white
+                              i.ion-calendar
+                            
                     .form-group.m-b-0
                       label.col-sm-2.control-label 검색어
                       .col-sm-2
@@ -347,7 +343,8 @@ block content
                       .col-sm-6
                         input.form-control(type='text')
                       .col-sm-2
-                        button.btn.btn-primary(type='button') 조회
+                        button.btn.btn-primary(type='submit') 조회
+            
             // end Search Area
             // start Grid Area
             .row
@@ -369,7 +366,9 @@ block content
                                 td #{incident[i].higher_cd}
                                 td #{incident[i].lower_cd}
                                 td #{incident[i].title}  
-                                td.highlight(data-highlight='search.highlight.title') #{incident[i].createdAt}
+                                //td.highlight(data-highlight='search.highlight.title') #{incident[i].register_date}
+                                //날짜 표기 방법 #{moment(job.postedAt).format("YYYY-MM-DD HH:mm")}
+                                td.highlight(data-highlight='search.highlight.title') #{incident[i].register_date}
                                 td #{incident[i].manager_sabun}
                         - }
                     - }else{
