--- a/app/views/search/viewall.jade
+++ b/app/views/search/viewall.jade
@@ -332,7 +332,8 @@ block content
                             input.form-control(type='text', placeholder='yyyy-mm-dd' id='datepicker_rcd2' name='datepicker_rcd2' value=datepicker_rcd2)
                             span.input-group-addon.bg-primary.b-0.text-white
                               i.ion-calendar
-                            
+                      .col-sm-2
+                        button.btn.btn-default(type='button' id='initBtn') 초기화      
                     .form-group.m-b-0
                       label.col-sm-2.control-label 검색어
                       .col-sm-2
