--- a/app/views/search/viewdetail.jade
+++ b/app/views/search/viewdetail.jade
@@ -1,112 +1,244 @@
 extends ../layouts/default
 block head
-    link(href='//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css', rel='stylesheet', type='text/css')
-    //link(href='/isu/css/board_style.css', rel='stylesheet')
+    title 1-4 처리된 내용검색:상세
+    // Plugins css
+    link(href='../plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.css', rel='stylesheet')
+    link(href='../plugins/multiselect/css/multi-select.css', rel='stylesheet', type='text/css')
+    link(href='../plugins/select2/select2.css', rel='stylesheet', type='text/css')
+    link(href='../plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.css', rel='stylesheet')
+    link(href='../plugins/timepicker/bootstrap-timepicker.min.css', rel='stylesheet')
+    link(href='../plugins/mjolnic-bootstrap-colorpicker/dist/css/bootstrap-colorpicker.min.css', rel='stylesheet')
+    link(href='../plugins/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css', rel='stylesheet')
+    link(href='../plugins/bootstrap-daterangepicker/daterangepicker.css', rel='stylesheet')
+    link(href='../plugins/switchery/switchery.min.css', rel='stylesheet')
+    link(href='assets/css/bootstrap.min.css', rel='stylesheet', type='text/css')
+    link(href='assets/css/core.css', rel='stylesheet', type='text/css')
+    link(href='assets/css/icons.css', rel='stylesheet', type='text/css')
+    link(href='assets/css/components.css', rel='stylesheet', type='text/css')
+    link(href='assets/css/pages.css', rel='stylesheet', type='text/css')
+    link(href='assets/css/menu_light.css', rel='stylesheet', type='text/css')
+    link(href='assets/css/responsive.css', rel='stylesheet', type='text/css')
+    script(src='assets/js/modernizr.min.js')
+    // HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
+    // WARNING: Respond.js doesn't work if you view the page via file://
+    //
+        if lt IE 9
+        script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
+        script(src='https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
 block content
-    .content
-        .container
-            .row(style='margin-top:20px')
-                .col-xs-12.col-sm-10.col-md-8
-                    h3.masthead-brand 처리된 내용 > 조회하기 > 상세조회
-                    hr.colorgraph
-            form.form.col-md-12.center-block(name='form' action='' method='post')
-                .row(style='margin-top:-15px')
-                    .col-xs-12.col-sm-10.col-md-8
-                        .form-group
-                            .btn.btn-primary.btn-signup(onclick="location.href='/search/viewall'") 목록
-                        hr
-                        .form-group
-                            dl.topic
-                                dt
-                                    span.wstate3 완료
-                                dd.ititle
-                                    a.span
-                                        | 전자전표시스템 결재프로세스 개선 요청
+    .content-page
+        .content
+            .container
+                // Page-Title
                 .row
-                    .col-xs-12.col-sm-10.col-md-8
-                        .panel.panel-default
-                            .panel-heading
-                                .row
-                                    .col-sm-8
-                                        h4
-                                            | 접수내용
-                                    .col-sm-4.text-right
-                                        span
-                                            | 박선우 | 2017-07-31 15:49
-                            .panel-body
-                                p
-                                | - 현재(변경전) : 한가지 결재조건 지정 가능 
-                                br
-                                | ① 그룹웨어 < 발신부서 < 수신부서(재경팀, 총무1과, 총무2과) 
-                                br
-                                br
-                                br
-                                | - 개선(변경후) : 두가지 결재조건 지정 가능 
-                                br
-                                | ① 그룹웨어 < 발신부서 < 수신부서(재경팀, 총무1과, 총무2과) 
-                                br
-                                | : 현업에서 전표 발생 후 관리부서에 수신 
-                                br
-                                br
-                                | ② 그룹웨어 < 수신부서(재경팀, 총무1과, 총무2과) 
-                                br
-                                | : 현업이 관리부서일 경우 처리방법(내부품의 형식)
-                                br
-                                br
-                                br
-                            .panel.panel-default(style='margin: 0 20px 20px 20px')
-                                .panel-heading
-                                    .row
-                                        .col-sm-8
-                                            h4
-                                                | 조치사항
-                                        .col-sm-4.text-right
-                                            span
-                                                | 2017-07-31 16:02
-                                .panel-body
-                                    p
-                                    .irps
-                                    | 안녕하세요. 이수시스템 박선우입니다.
-                                    br
-                                    br
-                                    | 해당 요청건 처리완료하였습니다. 
-                                    br
-                                    br
-                                    | 추가 문의사항 있으시면 연락주시기 바랍니다. 감사합니다.
-                                    br
-                                .panel-footer
-                                    .row
-                                        .col-sm-2
-                                            a.btn.btn-sq.btn-primary(href='#')
-                                                i.fa.fa-user.fa-5x
-                                                br
-                                                | ISU
-                                                br
-                                                | SYSYEM
-                                        .col-sm-10
-                                            p.iaction
-                                                | 담당자
-                                            p.iposition
-                                                strong 전략사업팀 | 
-                                                strong 박선우 
-                                                span 대리
-                                            p.iemail
-                                                | psw@isu.co.kr
-
-                        .panel.panel-default
-                                .panel-heading
-                                   h6
-                                    | 서비스 만족도 결과
-                                    span.r_arrow
-                                .panel-body
-                                    .vc_cont
-                                    .icont_text
-                                        strong 조치내역에 대해 만족도
-                                        span.gt_base > 
-                                        | 매우 만족
-                                        p.con_bar
-                                        strong 불편사항 및 개선사항
-                                        .con_txt
-
-                        .actionarea
-                            .btn.btn-primary.btn-signup(onclick="location.href='/search/viewall'") 목록
+                    .col-sm-12
+                        .page-title-box
+                            ol.breadcrumb.pull-right
+                                li
+                                    a(href='#') Home
+                                li
+                                    a(href='#') 문의 및 담당자
+                                li.active 처리된 내용검색
+                            h4.page-title 처리된 내용검색 - 상세
+                // Start Button Area
+                .row
+                    .col-lg-12
+                        .btn-toolbar.m-t-10(role='toolbar')
+                            .pull-left
+                                button.btn.btn-primary.waves-effect.waves-light.m-l-5(type='button')
+                                    i.fa.fa-bars
+                                    |  목록
+                                button.btn.btn-primary.waves-effect.waves-light.m-l-5(type='button')
+                                    i.fa.fa-edit
+                                    |  추가수정
+                            .pull-right
+                                button.btn.btn-info.waves-effect.waves-light.m-r-5(type='button')
+                                    i.fa.fa-file-pdf-o
+                                    |  PDF Download
+                                button.btn.btn-success.waves-effect.waves-light.m-r-5(type='button')
+                                    i.fa.fa-file-excel-o
+                                    |  Excel Download
+                                button.btn.btn-primary.waves-effect.waves-light.m-r-5(type='button')
+                                    i.fa.fa-print
+                                    |  인쇄
+                                button.btn.btn-purple.waves-effect.waves-light.m-r-5(type='button')
+                                    i.fa.fa-edit
+                                    |  버튼
+                // End Button Area
+                // start Grid Area
+                .row
+                    .col-sm-12.m-t-20
+                        .card-box
+                            h4
+                                b 접수 내용
+                            hr.m-0
+                            table.table.table-bordered
+                                colgroup
+                                    col(width='20%')
+                                    col(width='30%')
+                                    col(width='20%')
+                                    col(width='30%')
+                                tbody
+                                    tr
+                                        th.bg-muted 진행상태
+                                        td
+                                            span.label.label-primary 처리중
+                                            //
+                                                <span class="label label-info">보류</span>
+                                                <span class="label label-inverse">접수</span>
+                                                <span class="label label-success">미평가</span>
+                                                <span class="label label-purple">완료</span>
+                                        th.bg-muted 긴급구분
+                                        td 보통
+                                    tr
+                                        th.bg-muted 상위업무
+                                        td
+                                        th.bg-muted 하위업무
+                                        td
+                                    tr
+                                        th.bg-muted 요청자
+                                        td 주식회사 이수시스템/박선우
+                                        th.bg-muted 완료요청일
+                                        td 2017-09-23 00:00
+                                    tr
+                                        th.bg-muted 요청경로
+                                        td ServiceDesk
+                                        th.bg-muted 등록자/등록일
+                                        td 홍길동 2017-09-20 00:00
+                                    tr
+                                        th.bg-muted 제목
+                                        td(colspan='3')
+                                    tr
+                                        th.bg-muted 요청내용
+                                        td(colspan='3')
+                                            | 요청하였습니다.
+                                            br
+                                            | 											요청하였습니다.
+                                            br
+                                    tr(style='display:')
+                                        th.bg-muted 청부파일
+                                        td(colspan='3')
+                                            i.fa.fa-paperclip.m-r-10
+                                            a(href='#')
+                                                span.text-pink faqimage.gif
+                                    tr
+                                        th.bg-muted 접수상담내용
+                                        td(colspan='3')
+                                            | 접수하였습니다.
+                                            br
+                                            | 											접수하였습니다.
+                                            br
+                                    tr
+                                        th.bg-muted 처리담당자
+                                        td 박선우
+                                        th.bg-muted 접수일
+                                        td 홍길동 2017-09-20 00:00<
+                                    tr
+                                        th.bg-muted 완료예정일
+                                        td 2017-09-20 00:0
+                                        th.bg-muted 난이도
+                                        td
+                                            span.badge.badge-danger S
+                            h4.m-t-30
+                                b 처리 내용
+                            hr.m-0
+                            table.table.table-bordered.m-t-0
+                                colgroup
+                                    col(width='20%')
+                                    col(width='30%')
+                                    col(width='20%')
+                                    col(width='30%')
+                                tbody
+                                    tr
+                                        th.bg-muted 처리구분
+                                        td(colspan='3')
+                                    tr
+                                        th.bg-muted 처리내용
+                                        td(colspan='3')
+                                    tr
+                                        th.bg-muted 첨부파일
+                                        td(colspan='3')
+                                    tr
+                                        th.bg-muted Program_ID
+                                        td(colspan='3')
+                                    tr
+                                        th.bg-muted 처리완료일
+                                        td
+                                        th.bg-muted 처리소요시간
+                                        td
+                                            i.fa.fa-clock-o.text-muted
+                                            b.m-l-10.m-r-5 8
+                                            | 시간
+                                    tr
+                                        th.bg-muted 지연사유
+                                        td(colspan='3')
+                                    tr
+                                        th.bg-muted 평가
+                                        td
+                                        th.bg-muted 공개여부/조휘수
+                                        td 비공개/ 0
+                                    th.bg-muted.font-13
+                                        | Opti-DPP
+                                        br
+                                        | 										사용자확인정보
+                                    td(colspan='3')
+                                    tr
+                                        th.bg-muted.text-danger 내부공유사항
+                                        td(colspan='3')
+                            //
+                                start pagination
+                                <div class="row">
+                                <div class="col-sm-4">
+                                <div class="dataTables_info">Showing 1 to 10 of 57 entries</div>
+                                </div>
+                                <div class="col-sm-8">
+                                <div class="dataTables_paginate paging_simple_numbers pull-right">
+                                <ul class="pagination">
+                                <li class="cpaginate_button previous"><a href="#">Previous</a></li>
+                                <li class="cpaginate_button active"><a href="#">1</a></li>
+                                <li class="cpaginate_button"><a href="#">2</a></li>
+                                <li class="cpaginate_button"><a href="#">3</a></li>
+                                <li class="cpaginate_button"><a href="#">4</a></li>
+                                <li class="cpaginate_button"><a href="#">5</a></li>
+                                <li class="cpaginate_button"><a href="#">6</a></li>
+                                <li class="cpaginate_button next"><a href="#">Next</a></li>
+                                </ul>
+                                </div>
+                                </div>
+                                </div>
+                                end pagination
+                // end Grid Area
+            // end container
+        // end content
+        footer.footer.text-right  2017 © ISU Group. 
+        // ==============================================================
+        // End Right content here
+        // ==============================================================
+        // END wrapper
+script.
+    var resizefunc = [];
+// jQuery
+script(src='assets/js/jquery.min.js')
+script(src='assets/js/bootstrap.min.js')
+script(src='assets/js/detect.js')
+script(src='assets/js/fastclick.js')
+script(src='assets/js/jquery.slimscroll.js')
+script(src='assets/js/jquery.blockUI.js')
+script(src='assets/js/waves.js')
+script(src='assets/js/wow.min.js')
+script(src='assets/js/jquery.nicescroll.js')
+script(src='assets/js/jquery.scrollTo.min.js')
+script(src='../plugins/switchery/switchery.min.js')
+script(src='../plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.min.js')
+script(type='text/javascript', src='../plugins/multiselect/js/jquery.multi-select.js')
+script(type='text/javascript', src='../plugins/jquery-quicksearch/jquery.quicksearch.js')
+script(src='../plugins/select2/select2.min.js', type='text/javascript')
+script(src='../plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.js', type='text/javascript')
+script(src='../plugins/bootstrap-inputmask/bootstrap-inputmask.min.js', type='text/javascript')
+script(src='../plugins/moment/moment.js')
+script(src='../plugins/timepicker/bootstrap-timepicker.min.js')
+script(src='../plugins/mjolnic-bootstrap-colorpicker/dist/js/bootstrap-colorpicker.min.js')
+script(src='../plugins/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js')
+script(src='../plugins/bootstrap-daterangepicker/daterangepicker.js')
+script(src='assets/js/jquery.core.js')
+script(src='assets/js/jquery.app.js')
