--- a/app/views/incident/viewDetail.jade
+++ b/app/views/incident/viewDetail.jade
@@ -103,7 +103,7 @@ block content
                                                 .wid-u-info
                                                     small.text-primary
                                                         b 담당자
-                                                    h4.m-t-5.m-b-5 #{incident.manager_dept} #{incident.manager_nm} #{incident.manager_position}
+                                                    h4.m-t-5.m-b-5 #{incident.manager_dept_nm} #{incident.manager_nm} #{incident.manager_position}
                                                     p.text-muted.m-b-5.font-13
                                                         i.md.md-mail.m-r-5
                                                         | #{incident.manager_email}
