--- a/app/views/incident/new.jade
+++ b/app/views/incident/new.jade
@@ -51,6 +51,7 @@ block head
 
     //첨부파일
     script(src='/vendor/fileupload/js/fileinput.js', type='text/javascript')
+
     script(src='/isu/js/incident/new.js', type='text/javascript')
 
 
@@ -69,8 +70,15 @@ block content
                                 li.active 문의하기
                             h4.page-title 문의하기
                 .row
+                    .col-sm-12
+                        .btn-toolbar.m-t-10(role='toolbar')
+                            .pull-right
+                                button.btn.btn-primary.waves-effect.waves-light.m-r-5(type='submit')
+                                    span 저장
+                                    i.fa.fa-send.m-l-10
+                .row
                     .col-lg-12
-                        .card-box
+                        .card-box.m-t-10
                             .p-20
                                 form.form-horizontal.group-border-dashed(id='form' name='form' action='/incident/new' method='post' enctype="multipart/form-data")  
                                     .form-group
@@ -85,20 +93,20 @@ block content
                                                 - }
                                         label.col-sm-2.control-label 긴급구분
                                         .col-sm-2
-                                            select.form-control(name='incident[lower_cd]')
-                                                option 긴급
-                                                option 보통     
+                                            select.form-control(name='incident[process_speed]')
+                                                option(value='N') 보통
+                                                option(value='Y') 긴급     
                                     .form-group
                                         label.col-sm-2.control-label 요청자명
                                         .col-sm-4
-                                            input.form-control(type='text', name='incident[real_register_mm]', style = "ime-mode:active")
+                                            input.form-control(type='text', name='incident[real_register_mm]', style = "ime-mode:active", required, value=user_nm)
                                         label.col-sm-2.control-label 연락처
                                         .col-sm-4
-                                            input.form-control(type='text', name='incident[real_contact]', placeholder='전화번호 / hong@xxxx.co.kr')
+                                            input.form-control(type='text', name='incident[real_contact]', placeholder='전화번호 / hong@xxxx.co.kr', required, value=real_contact)
                                     .form-group(id='app_menu', style='display:none')
                                         label.col-sm-2.control-label 문의요청 화면
                                         .col-sm-10
-                                            input.form-control(type='text', name='incident[app_menu]', placeholder='인사관리>발령정보>발령처리')                 
+                                            input.form-control(type='text', name='incident[app_menu]', placeholder='인사관리>발령정보>발령처리' )                 
                                     .form-group
                                         label.col-sm-2.control-label 요청완료일
                                         .col-sm-4
@@ -115,7 +123,7 @@ block content
                                     .form-group
                                         label.col-sm-2.control-label 제목
                                         .col-sm-10
-                                            input.form-control(type='text', name='incident[title]', style = "ime-mode:active")
+                                            input.form-control(type='text', name='incident[title]', style = "ime-mode:active", required)
                                     .form-group
                                         .col-sm-12
                                             textarea#summernote.summernote
@@ -123,12 +131,6 @@ block content
                                         .col-md-12.portlets
                                             .m-b-30
                                                 input#attach-file.file(name='incident[attach-file]', type='file', data-upload-url="#", multiple='')
-                                        .btn-toolbar.form-group.m-b-0
-                                            .pull-right
-                                                button.btn.btn-default.waves-effect.waves-light.m-r-5(type='reset') 취소
-                                                button.btn.btn-primary.waves-effect.waves-light(type='submit')
-                                                    span 저장
-                                                        i.fa.fa-send.m-l-10
 block footer
 
 
