--- a/app/views/company/show.jade
+++ b/app/views/company/show.jade
@@ -69,7 +69,7 @@ block content
                       .form-group
                       label.col-sm-3.control-label 회사코드
                       .col-sm-3
-                          input.form-control(type='text', name='company[com_cd]', readonly value='#{company.com_cd}', placeholder='')
+                          input.form-control(type='text', name='company[company_cd]', readonly value='#{company.company_cd}', placeholder='')
                       .form-group
                       label.col-sm-3.control-label 회사명
                       .col-sm-3
