--- a/app/views/higherProcess/edit.jade
+++ b/app/views/higherProcess/edit.jade
@@ -92,7 +92,7 @@ block content
                         .form-group
                         label.col-sm-3.control-label 회사코드
                         .col-sm-3
-                          input.form-control(type='text', name='higherProcess[com_cd]', value='#{higherProcess.com_cd}', placeholder='')
+                          input.form-control(type='text', name='higherProcess[company_cd]', value='#{higherProcess.company_cd}', placeholder='')
                         .form-group
                         label.col-sm-3.control-label 사번
                         .col-sm-3
