--- a/app/views/company/new.jade
+++ b/app/views/company/new.jade
@@ -55,7 +55,7 @@ block content
                       .form-group
                         label.col-sm-3.control-label 회사코드
                         .col-sm-3
-                          input.form-control(type='text', name='company[com_cd]', placeholder='')
+                          input.form-control(type='text', name='company[company_cd]', placeholder='')
                       .form-group
                         label.col-sm-3.control-label 회사명
                         .col-sm-3
